--- a/html/course-list.html
+++ b/html/course-list.html
@@ -10,30 +10,30 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--===============================================================================================-->
-	<link rel="icon" type="image/png" href="images/icons/favicon.png"/>
+	<link rel="icon" type="image/png" href="../images/icons/favicon.png"/>
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/bootstrap/css/bootstrap.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="../fonts/font-awesome-4.7.0/css/font-awesome.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="fonts/elegant-font/html-css/style.css">
+	<link rel="stylesheet" type="text/css" href="../fonts/elegant-font/html-css/style.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/css-hamburgers/hamburgers.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/slick/slick.css">
+	<link rel="stylesheet" type="text/css" whref="../vendor/slick/slick.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/animate/animate.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/lightbox2/css/lightbox.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/lightbox2/css/lightbox.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="vendor/animsition/dist/css/animsition.min.css">
+	<link rel="stylesheet" type="text/css" href="../vendor/animsition/dist/css/animsition.min.css">
 <!--===============================================================================================-->
-	<link rel="stylesheet" type="text/css" href="css/util.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="stylesheet" type="text/css" href="css/color.css">
+	<link rel="stylesheet" type="text/css" href="../css/util.css">
+	<link rel="stylesheet" type="text/css" href="../css/main.css">
+	<link rel="stylesheet" type="text/css" href="../css/color.css">
 <!--===============================================================================================-->
 </head>
-<script type="module" src="./js/driverdetails.js"></script>
+<script type="module" src="../js/driverdetails.js"></script>
 
 <body class="animsition restyle-index">
 	
@@ -47,7 +47,7 @@
 					
 					<!-- Logo desktop -->		
 					<a href="index.html" class="logo">
-						<img src="images/icons/logo.png" alt="IMG-LOGO">
+						<img src="../images/icons/logo.png" alt="IMG-LOGO">
 					</a>
 
 					<!-- Menu desktop -->
@@ -115,7 +115,7 @@
 		<div class="wrap-header-mobile">
 			<!-- Logo moblie -->		
 			<a href="index.html" class="logo-mobile">
-				<img src="images/icons/logo.png" alt="IMG-LOGO">
+				<img src="../images/icons/logo.png" alt="IMG-LOGO">
 			</a>
 			
 
@@ -346,7 +346,7 @@
 			<div class="row">
 				<div class=" col-sm-12 col-lg-3 p-t-30">
 					<div class="w-full wrap-pic-max-w">
-						<a href="index.html"><img src="images/icons/logo-02.png" alt="LOGO"></a>
+						<a href="index.html"><img src="../images/icons/logo-02.png" alt="LOGO"></a>
 					</div>
 
 					<p class="s-txt9 p-t-30">
@@ -417,28 +417,28 @@
 					</h4>
 
 					<div class="wrap-gallery-footer p-t-35">
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-01.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-01.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-01.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-01.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-02.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-02.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-02.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-02.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-03.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-03.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-03.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-03.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-04.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-04.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-04.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-04.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-05.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-05.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-05.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-05.jpg" alt="GALLERY">
 						</a>
 
-						<a class="item-gallery-footer wrap-pic-w" href="images/gallery-footer-06.jpg" data-lightbox="gallery-footer">
-							<img src="images/gallery-footer-06.jpg" alt="GALLERY">
+						<a class="item-gallery-footer wrap-pic-w" href="../images/gallery-footer-06.jpg" data-lightbox="gallery-footer">
+							<img src="../images/gallery-footer-06.jpg" alt="GALLERY">
 						</a>
 					</div>
 				</div>
@@ -463,30 +463,30 @@
 
 	
 <!--===============================================================================================-->	
-	<script src="vendor/jquery/jquery-3.2.1.min.js"></script>
+	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/wow/wow.min.js"></script>
+	<script src="../vendor/wow/wow.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/animsition/dist/js/animsition.min.js"></script>
+	<script src="../vendor/animsition/dist/js/animsition.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/slick/slick.min.js"></script>
-	<script src="js/slick-custom.js"></script>
+	<script src="../vendor/slick/slick.min.js"></script>
+	<script src="../js/slick-custom.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/bootstrap/js/popper.min.js"></script>
-	<script src="vendor/bootstrap/js/bootstrap.min.js"></script>
+	<script src="../vendor/bootstrap/js/popper.min.js"></script>
+	<script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/lightbox2/js/lightbox.min.js"></script>
+	<script src="../vendor/lightbox2/js/lightbox.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/isotope/isotope.pkgd.min.js"></script>
+	<script src="../vendor/isotope/isotope.pkgd.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/parallax100/parallax100.js"></script>
+	<script src="../vendor/parallax100/parallax100.js"></script>
 	<script>
         $('.parallax100').parallax100();
 	</script>
 <!--===============================================================================================-->
-	<script src="vendor/waypoint/jquery.waypoints.min.js"></script>
+	<script src="../vendor/waypoint/jquery.waypoints.min.js"></script>
 <!--===============================================================================================-->
-	<script src="vendor/countterup/jquery.counterup.min.js"></script>
+	<script src="../vendor/countterup/jquery.counterup.min.js"></script>
 	<script>
 		$('.counter').counterUp({
 			delay: 10,
@@ -494,7 +494,7 @@
 		});
 	</script>
 <!--===============================================================================================-->
-	<script src="js/main.js"></script>
+	<script src="../js/main.js"></script>
 
 </body>
 </html>
