--- a/html/login.html
+++ b/html/login.html
@@ -82,7 +82,7 @@
 	                            </div>
 	                            <button type="submit" class="btn_1 full-width">Login</button>
 	                        </form>
-	                        <p class="text-center mt-3 mb-0">Don't have an account? <a href="#0">Sign Up</a></p>
+	                        <p class="text-center mt-3 mb-0">Don't have an account? <a href="signup.html">Sign Up</a></p>
 	                        <form class="input_style_1" method="post">
 	                            <div id="forgot_pw">
 	                                <h4 class="mb-3">Forgot Password</h4>
