--- a/html/navbar.html
+++ b/html/navbar.html
@@ -68,54 +68,19 @@
           <ul class="main-menu">
             <li>
               <a href="index.html">Home</a>
-              <ul class="sub-menu">
-                <li><a href="index.html">Homepage V1</a></li>
-                <li><a href="home-02.html">Homepage V2</a></li>
-                <li><a href="home-03.html">Homepage V3</a></li>
-              </ul>
             </li>
 
             <li>
               <a href="course-list.html">Instructors</a>
             </li>
 
-            <li>
-              <a href="about-team.html">Teachers</a>
-            </li>
-
-            <li>
-              <a href="#">Pages</a>
-              <ul class="sub-menu">
-                <li><a href="photo-gallery.html">Photo Gallery</a></li>
-              </ul>
-            </li>
-
-            <li>
-              <a href="blog.html">Blog</a>
-              <ul class="sub-menu">
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="blog-single.html">Blog Single</a></li>
-              </ul>
-            </li>
-
             <li class="respon-sub-menu">
-              <a href="about.html">About</a>
-              <ul class="sub-menu">
-                <li><a href="about.html">About</a></li>
-                <li><a href="about-team.html">About Team Member</a></li>
-              </ul>
+              <a href="forum.html">Forum</a>
             </li>
-
             <li class="respon-sub-menu">
-              <a href="contact.html">Contact</a>
+              <a href="login.html">Login</a>
             </li>
           </ul>
-        </div>
-        
-        <!-- Social desktop -->
-        <div class="social">
-          <a href="#"><i class="fa fa-facebook m-l-13" aria-hidden="true"></i></a>
-          <a href="#"><i class="fa fa-twitter m-l-18" aria-hidden="true"></i></a>
         </div>
         
       </div>
