--- a/html/index.html
+++ b/html/index.html
@@ -36,6 +36,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/color.css">
 <!--===============================================================================================-->
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <body class="animsition restyle-index">
 	
@@ -999,6 +1000,15 @@
 	<script src="../js/map-custom.js"></script>
 <!--===============================================================================================-->
 	<script src="../js/main.js"></script>
+	<div id="nav-placeholder">
+
+    </div>
+    
+    <script>
+    $(function(){
+      $("#nav-placeholder").load("navbar.html");
+    });
+    </script>
 
 </body>
 </html>
