--- a/html/course-list.html
+++ b/html/course-list.html
@@ -33,7 +33,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/color.css">
 <!--===============================================================================================-->
 
-<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
 </head>
 <script type="module" src="../js/driverdetails.js"></script>
 
@@ -67,6 +67,37 @@
 							<li>
 								<a href="course-list.html">Instructors</a>
 						
+							</li>
+
+							<li>
+								<a href="about-team.html">Teachers</a>
+							</li>
+
+							<li>
+								<a href="#">Pages</a>
+								<ul class="sub-menu">
+									<li><a href="photo-gallery.html">Photo Gallery</a></li>
+								</ul>
+							</li>
+
+							<li>
+								<a href="blog.html">Blog</a>
+								<ul class="sub-menu">
+									<li><a href="blog.html">Blog</a></li>
+									<li><a href="blog-single.html">Blog Single</a></li>
+								</ul>
+							</li>
+
+							<li class="respon-sub-menu">
+								<a href="about.html">About</a>
+								<ul class="sub-menu">
+									<li><a href="about.html">About</a></li>
+									<li><a href="about-team.html">About Team Member</a></li>
+								</ul>
+							</li>
+
+							<li class="respon-sub-menu">
+								<a href="contact.html">Contact</a>
 							</li>
 						</ul>
 					</div>
@@ -203,7 +234,7 @@
 	</header>
 
 	<!-- Title page -->
-	<section class="bg-img-1 bg-overlay-3 p-t-93 p-b-95" style="background-image: url('./images/carousel1.jpg');">
+	<section class="bg-img-1 bg-overlay-3 p-t-93 p-b-95" style="background-image: url('../images/carousel1.jpg');">
 		<div class="container">
 			<div class="flex-w flex-sb-m">
 				<div class="p-t-10 p-b-10 p-r-30">
