--- a/html/course-detail.html
+++ b/html/course-detail.html
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/color.css">
 <!--===============================================================================================-->
+<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 </head>
 <script type="module" src="../js/driverprofile.js"></script>
 
@@ -235,7 +236,7 @@
 	</header>
 
 	<!-- Title page -->
-	<section class="bg-img-1 bg-overlay-3 p-t-93 p-b-95" style="background-image: url('images/carousel1.jpg');">
+	<section class="bg-img-1 bg-overlay-3 p-t-93 p-b-95" style="background-image: url('../images/carousel1.jpg');">
 		<div class="container">
 			<div class="flex-w flex-sb-m">
 				<div class="p-t-10 p-b-10 p-r-30">
@@ -441,9 +442,19 @@
 	<script src="../vendor/waypoint/jquery.waypoints.min.js"></script>
 <!--===============================================================================================-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAKFWBqlKAGCeS1rMVoaNlwyayu0e0YRes"></script>
-	<script src="../js/map-custom.js"></script>
+	<script src="js/map-custom.js"></script>
 <!--===============================================================================================-->
 	<script src="../js/main.js"></script>
+	<script src="../js/main.js"></script>
+	<div id="nav-placeholder">
+
+    </div>
+    
+    <script>
+    $(function(){
+      $("#nav-placeholder").load("navbar.html");
+    });
+    </script>
 
 </body>
 </html>
