--- a/html/calendar.html
+++ b/html/calendar.html
@@ -9,9 +9,21 @@
 
   <link rel="stylesheet" href="../css/calendar.css">
   <link href="../css/bootstrap.min.css" rel="stylesheet" >
-  <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/color-calendar/dist/bundle.js"></script>
+<link
+  href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+  rel="stylesheet"
+/>
+<script src="https://cdn.jsdelivr.net/npm/color-calendar/dist/bundle.js"></script>
+<link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
   
 </head>
 
@@ -37,12 +49,7 @@
   <div class="container">
     <div class='row'>
       <div class='col-6'>
-        <div id="calendar">
-          <h3 style="font-weight: bold; font-size:23px; margin-bottom:20px ;">Select Time</h3>
-          <div id="calendar_header"><i class="icon-chevron-left"></i>          <h1></h1><i class="icon-chevron-right"></i>         </div>
-          <div id="calendar_weekdays"></div>
-          <div id="calendar_content"></div>
-        </div>
+        <div id="calendar-a"></div>
       </div>
     </div>
     
