--- a/html/index.html
+++ b/html/index.html
@@ -310,7 +310,7 @@
 					    data-fontsize="['18', '18', '18', '16']"
 					    data-lineheight="['30', '30', '30', '30']"
 					    data-height="['auto']"
-					    >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit. 
+					    >Our customized recorded lessons will ensure that you get a preview of what to expect during every class so that we can ensure that you know what to expect for every lessons.
 					    </p>
 
 					    <div class="tp-caption tp-resizeme wrap-btn-slide"
