--- a/html/index.html
+++ b/html/index.html
@@ -665,7 +665,7 @@
 		<div class="contact-map h-size1" id="google_map" data-map-x="40.648578" data-map-y="-73.962730" data-pin="../images/icons/favicon.png" data-scrollwhell="0" data-draggable="1"  data-zoom="15"></div>
 	</div>
 
-	<footer class="bg4 p-t-25">
+	<footer class="bg4 p-t-25" style="padding:0 !important">
 		<div class="container p-b-60">
 			<div class="row">
 				<div class=" col-sm-12 col-lg-3 p-t-30">
@@ -743,11 +743,11 @@
 
 
 	<!-- Back to top -->
-	<div class="btn-back-to-top hov-bg-main" id="myBtn">
+	<!-- <div class="btn-back-to-top hov-bg-main" id="myBtn">
 		<span class="symbol-btn-back-to-top">
 			<i class="fa fa-angle-double-up" aria-hidden="true"></i>
 		</span>
-	</div>
+	</div> -->
 
 
 
