--- a/html/footer.html
+++ b/html/footer.html
@@ -66,7 +66,7 @@
 					</div>
 
 					<p class="s-txt9 p-t-30">
-						Lean To Drive is a clean PSD theme suitable for corporate. You can cus-tomize it very easy to fit your needs. Lorem ipsum dolor sit amet, consecte-tur adipiscing elit sollicitudin vel effici-tur eu, posuere sit amet erat.
+						DriverZone is estalibished in 2021 and it is an online portal to allow users to find private driving instructors based on their requirements.
 					</p>
 				</div>
 				
@@ -102,22 +102,12 @@
 					<ul class="contact-footer p-t-28">
 						<li>
 							<i class="fa fa-home" aria-hidden="true"></i>
-							379 5th Ave  New York, NYC 10018
-						</li>
-
-						<li>
-							<i class="fa fa-phone" aria-hidden="true"></i>
-							(+1) 96 716 6879
-						</li>
-
-						<li>
-							<i class="fa fa-fax" aria-hidden="true"></i>
-							(+1) 96 716 6879
+							80 Stamford Rd, Singapore 178902
 						</li>
 
 						<li>
 							<i class="fa fa-envelope-o" aria-hidden="true"></i>
-							contact@site.com
+							driverzone
 						</li>
 
 						<li>
