--- a/html/index.html
+++ b/html/index.html
@@ -47,130 +47,7 @@
 	<div id="nav-placeholder">
 
     </div>
-	<header>
-		<!-- Header desktop -->
-		
 
-
-		<!-- Header Mobile -->
-		<div class="wrap-header-mobile">
-			<!-- Logo moblie -->		
-			<a href="index.html" class="logo-mobile">
-				<img src="../images/icons/logo.png" alt="IMG-LOGO">
-			</a>
-			
-
-			<!-- Button show menu -->
-			<div class="btn-show-menu-mobile hamburger hamburger--squeeze">
-				<span class="hamburger-box">
-					<span class="hamburger-inner"></span>
-				</span>
-			</div>
-				
-		</div>
-
-
-		<!-- Menu Mobile -->
-		<div class="menu-mobile">
-			<ul class="topbar-mobile">
-				<li class="bo1-b p-t-8 p-b-8">
-					<div class="left-top-bar p-l-7">
-						<a href="#">Search</a>
-						<a href="#">About</a>
-						<a href="#">Blog</a>
-						<a href="#">FAQ</a>
-					</div>
-				</li>
-
-				<li class="right-top-bar bo1-b p-t-8 p-b-8">
-					<span>
-						<i class="icon_phone" aria-hidden="true"></i>
-						<span>1-800-123-6889</span>
-					</span>
-				</li>
-
-				<li class="right-top-bar bo1-b p-t-8 p-b-8">
-					<span>
-						<i class="icon_pin" aria-hidden="true"></i>
-						<span>8th floor, 379 Hudson St, New York</span>
-					</span>
-				</li>
-
-				<li class="right-top-bar bo1-b p-t-8 p-b-8">
-					<span>
-						<i class="icon_clock" aria-hidden="true"></i>
-						<span>09:30 am – 06:00 pm</span>
-					</span>
-				</li>
-			</ul>
-
-			<ul class="main-menu-m bg-main">
-				<li class="bg-main">
-					<a href="index.html">Home</a>
-					<ul class="sub-menu-m">
-						<li><a href="index.html">Homepage V1</a></li>
-						<li><a href="home-02.html">Homepage V2</a></li>
-						<li><a href="home-03.html">Homepage V3</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
-				</li>
-
-				<li class="bg-main">
-					<a href="course-list.html">Courses</a>
-					<ul class="sub-menu-m">
-						<li><a href="course-list.html">Course List</a></li>
-						<li><a href="course-grid.html">Course Grid</a></li>
-						<li><a href="course-detail.html">Course Detail</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
-				</li>
-
-				<li class="bg-main">
-					<a href="about-team.html">Teachers</a>
-				</li>
-
-				<li class="bg-main">
-					<a href="#">Pages</a>
-					<ul class="sub-menu-m">
-						<li><a href="photo-gallery.html">Photo Gallery</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
-				</li>
-
-				<li class="bg-main">
-					<a href="blog.html">Blog</a>
-					<ul class="sub-menu-m">
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="blog-single.html">Blog Single</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
-				</li>
-
-				<li class="bg-main">
-					<a href="about.html">About</a>
-					<ul class="sub-menu-m">
-						<li><a href="about.html">About</a></li>
-						<li><a href="about-team.html">About Team Member</a></li>
-					</ul>
-					<span class="arrow-main-menu-m">
-						<i class="fa fa-angle-right" aria-hidden="true"></i>
-					</span>
-				</li>
-
-				<li class="bg-main">
-					<a href="contact.html">Contact</a>
-				</li>
-			</ul>
-		</div>
-	</header>
 
 	<!-- Slide -->
 	<section class="slider">
@@ -564,8 +441,8 @@
 							</div>
 
 							<div class="wrap-info-person p-l-20">
-								<span class="dis-block s-txt3">Mary Bailey</span>
-								<span class="dis-block s-txt4">Chief Executive Officer, Envato</span>
+								<span class="dis-block s-txt3">Sharon Lim </span>
+								<span class="dis-block s-txt4">Data Scientist</span>
 							</div>
 						</div>
 					</div>
@@ -581,8 +458,8 @@
 							</div>
 
 							<div class="wrap-info-person p-l-20">
-								<span class="dis-block s-txt3">Mary Bailey</span>
-								<span class="dis-block s-txt4">Chief Executive Officer, Envato</span>
+								<span class="dis-block s-txt3">Aaron Tan</span>
+								<span class="dis-block s-txt4">Software Engineer</span>
 							</div>
 						</div>
 					</div>
@@ -598,8 +475,8 @@
 							</div>
 
 							<div class="wrap-info-person p-l-20">
-								<span class="dis-block s-txt3">Mary Bailey</span>
-								<span class="dis-block s-txt4">Chief Executive Officer, Envato</span>
+								<span class="dis-block s-txt3">Bradon Quek</span>
+								<span class="dis-block s-txt4">Student</span>
 							</div>
 						</div>
 					</div>
@@ -616,7 +493,7 @@
 
 							<div class="wrap-info-person p-l-20">
 								<span class="dis-block s-txt3">Mary Bailey</span>
-								<span class="dis-block s-txt4">Chief Executive Officer, Envato</span>
+								<span class="dis-block s-txt4">Student</span>
 							</div>
 						</div>
 					</div>
@@ -664,7 +541,8 @@
 
 	<!-- Map -->
 	<div class="map">
-		<div class="contact-map h-size1" id="google_map" data-map-x="40.648578" data-map-y="-73.962730" data-pin="../images/icons/favicon.png" data-scrollwhell="0" data-draggable="1"  data-zoom="15"></div>
+		<!-- <div class="contact-map h-size1" id="google_map" data-map-x="40.648578" data-map-y="-73.962730" data-pin="../images/icons/favicon.png" data-scrollwhell="0" data-draggable="1"  data-zoom="15"></div> -->
+		<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d997.1994724596256!2d103.85026240613571!3d1.2958718123399418!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31da19a3872d602d%3A0x40428c26a9a9976!2sLKCSB%20Car%20Park!5e0!3m2!1sen!2ssg!4v1634144849004!5m2!1sen!2ssg" width="100%" height="380" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 	</div>
 
 	
@@ -681,7 +559,7 @@
 
 
 
-
+	
 <!--===============================================================================================-->	
 	<script src="../vendor/jquery/jquery-3.2.1.min.js"></script>
 <!--===============================================================================================-->
