--- a/html/course-list.html
+++ b/html/course-list.html
@@ -207,7 +207,7 @@
 						3
 					</a>
 
-					<a href="#" class="s-txt24 hov-color-main trans-03 m-l-23 m-t-10 m-b-10">
+					<a class="s-txt24 hov-color-main trans-03 m-l-23 m-t-10 m-b-10" id="next"> 
 						Next
 						<i class="fa fa-angle-right m-l-8"></i>
 					</a>
