--- a/html/index.html
+++ b/html/index.html
@@ -295,7 +295,7 @@
 						<div class="wrap-text-b1 bg-main op-09 trans-05">
 							<a href="#"><div class="wrap-title-b1">
 								<i class="fa fa-id-card color-white fs-30" aria-hidden="true"></i>
-								<h4 class="m-txt3 color-white tt-up m-l-15">Driving Licence</h4>
+								<h4 class="m-txt3 color-white tt-up m-l-15">Driving License</h4>
 							</div></a>
 
 							<!-- <div class="wrap-para-b1 p-l-50 p-r-20 m-tt-20">
