--- a/html/signup.html
+++ b/html/signup.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Betler Multipurpose Forms HTML Template">
     <meta name="author" content="Ansonika">
-    <title>Betler | Multipurpose Forms HTML Template</title>
+    <title>Signup</title>
 
     <!-- Favicons-->
     <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
@@ -23,9 +23,8 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link href="../css/loginvendors.css" rel="stylesheet">
     <link href="../css/loginstyle.css" rel="stylesheet">
+	<link href="../css/insertuser.css" rel="stylesheet">
 
-    <!-- EXTRA CSS RTL STYLES ONLY -->
-  
 
     <!-- YOUR CUSTOM CSS -->
     <link href="../css/custom.css" rel="stylesheet">
@@ -36,10 +35,12 @@
             margin-left:10%;
         }
     </style>
+
+<script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js"></script>
 </head>
 
 <body>
-
+	
 	<div id="preloader">
 		<div data-loader="circle-side"></div>
 	</div><!-- /Preload -->
@@ -67,7 +68,7 @@
 	                <div class="row">
 	                    <div class="col-lg-9 col-xl-7 mx-auto">
 	                        <h4 class="mb-3">Sign Up</h4>
-	                        <form class="input_style_1" method="post">
+	                        <div class="form">
 	                        	<input id="website" name="website" type="text" value="">
 								<!-- Leave for security protection, read docs for details -->
 								<div class="form-group">
@@ -88,6 +89,10 @@
 	                                <label for="email_address">Email Address</label>
 	                                <input type="email" name="email_address" id="email_address" class="form-control" required>
 	                            </div>
+								<div class="form-group">
+	                                <label for="phone_num">Phone Number</label>
+	                                <input type="text" name="phone_num" id="phone_num" class="form-control" required>
+	                            </div>
 	                            <div class="form-group">
 	                                <label for="password1">Password</label>
 	                                <input type="password" name="password1" id="password1" class="form-control">
@@ -103,7 +108,7 @@
 	                                        <span class="checkmark"></span>
 	                                    </label>
 	                                </div>
-	                            <button type="submit" class="btn_1 full-width submit">Sign Up</button>
+	                            <button type="submit" class="btn_1 full-width submit" onclick="subz()">Sign Up</button>
 	                        </form>
 	                        <p class="text-center mt-3 mb-0">Already have an account? <a href="login.html">Sign In</a></p>
 	                    </div>
@@ -145,7 +150,152 @@
 	<!-- SPECIFIC SCRIPTS -->
 	<script src="../js/pw_strength.js"></script>
 	<script src="../js/jquery.validate.js"></script>
-	<script src="../js/registration_func.js"></script>
- 
+	
+	<script src="../js/insertuser.js"></script>
+	
+	<script>
+	function subz(){
+		var result = 0;
+		var count = 0;
+		var msg = "";
+		var nric = document.getElementById("nric").value;
+		var pnum = document.getElementById("phone_num").value;
+		var email = document.getElementById("email_address").value;
+
+		var password1 = document.getElementById("password1").value;
+		var password2 = document.getElementById("password2").value;
+
+
+		result = validateNRIC(nric);
+		if(result===false){
+			msg += "Please enter a valid NRIC\n";
+			count +=1;
+		}
+
+		result = checkPhoneNum(pnum);
+		if(result===false){
+			msg += "Please enter a valid Phone Number\n";
+			count +=1;
+		}
+
+		result = ValidateEmail(email);
+		if(result===false){
+			msg += "Please enter a valid Email address\n";
+			count +=1;
+		}
+
+
+		result = passwordlength(password1,password2);
+		if(result===false){
+			msg += "Please ensure that your password has a length of 5 at least\n";
+			count +=1;
+		}
+
+		else{
+			result = validatePassword(password1,password2);
+			if(result===false){
+			msg += "Please ensure that you enter the same password for both fields\n";
+			count +=1;
+		}
+		}
+
+		if (count>0){
+			alert(msg)
+		}
+		else{
+			alert("here")
+			var success = writeUserData()
+		}
+		
+	}
+
+	function passwordlength(pw1,pw2){
+		if (pw1.length <5){
+			return false
+		}
+		return true
+	}
+
+	function validatePassword(pw1,pw2){
+		if(pw1 !== pw2){
+			return false
+		}
+
+		return true;
+	}
+
+
+	function ValidateEmail(mail) 
+	{
+	if (/^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(mail))
+	{
+		return true
+	}
+		
+		return false
+	}
+
+
+
+function checkPhoneNum(str){
+	if(str[0] != "8"){
+		if(str[0] != "9"){
+			return false
+}
+	}
+	if(str.length !=8){
+		return false
+	}
+	return true;
+}
+
+function validateNRIC(str) {
+    if (str.length != 9) 
+        return false;
+
+    str = str.toUpperCase();
+
+    var i, 
+        icArray = [];
+    for(i = 0; i < 9; i++) {
+        icArray[i] = str.charAt(i);
+    }
+
+    icArray[1] = parseInt(icArray[1], 10) * 2;
+    icArray[2] = parseInt(icArray[2], 10) * 7;
+    icArray[3] = parseInt(icArray[3], 10) * 6;
+    icArray[4] = parseInt(icArray[4], 10) * 5;
+    icArray[5] = parseInt(icArray[5], 10) * 4;
+    icArray[6] = parseInt(icArray[6], 10) * 3;
+    icArray[7] = parseInt(icArray[7], 10) * 2;
+
+    var weight = 0;
+    for(i = 1; i < 8; i++) {
+        weight += icArray[i];
+    }
+
+    var offset = (icArray[0] == "T" || icArray[0] == "G") ? 4:0;
+    var temp = (offset + weight) % 11;
+
+    var st = ["J","Z","I","H","G","F","E","D","C","B","A"];
+    var fg = ["X","W","U","T","R","Q","P","N","M","L","K"];
+
+    var theAlpha;
+    if (icArray[0] == "S" || icArray[0] == "T") { theAlpha = st[temp]; }
+    else if (icArray[0] == "F" || icArray[0] == "G") { theAlpha = fg[temp]; }
+
+    return (icArray[8] === theAlpha);
+}
+
+
+
+
+</script>
+
+
+  
+  
+
+
 </body>
 </html>
