--- a/html/signup.html
+++ b/html/signup.html
@@ -36,7 +36,7 @@
         }
     </style>
 
-<script src="https://www.gstatic.com/firebasejs/9.1.1/firebase-database.js"></script>
+	<script type="module" src="../js/insertuser.js"></script>	
 </head>
 
 <body>
