--- a/html/course-list.html
+++ b/html/course-list.html
@@ -194,9 +194,9 @@
 				
 
 				<!-- Pagination -->
-				<div class="flex-w flex-m p-t-15">
-					<button type="button" class="btn btn-light" id="hello">click</button>
-					<a href="#1" class="flex-c-m s-txt24 size14 bgwhite bo6 bo-rad-3 hov3 trans-03 m-r-12 m-t-5 m-b-5 act-pagi" id="1">
+				<div class="flex-w flex-m p-t-15" id="buttons" >
+	
+					<!-- <a href="#1" class="flex-c-m s-txt24 size14 bgwhite bo6 bo-rad-3 hov3 trans-03 m-r-12 m-t-5 m-b-5 act-pagi" id="1">
 						1
 					</a>
 
@@ -206,13 +206,15 @@
 
 					<a href="#3" class="flex-c-m s-txt24 size14 bgwhite bo6 bo-rad-3 hov3 trans-03 m-r-12 m-t-5 m-b-5" >
 						3
-					</a>
+					</a> -->
 
-					<a class="s-txt24 hov-color-main trans-03 m-l-23 m-t-10 m-b-10" id="next"> 
+					<!-- <a class="s-txt24 hov-color-main trans-03 m-l-23 m-t-10 m-b-10" id="next"> 
 						Next
 						<i class="fa fa-angle-right m-l-8"></i>
-					</a>
+					</a> -->
+					<!-- <button type="button" class="btn btn-light" id="hello">click</button> -->
 				</div>
+		
 			</div>
 
 			
