--- a/html/forum.html
+++ b/html/forum.html
@@ -95,7 +95,7 @@
 
             function add_new_post()
             {
-                
+                location.href="add_post.html"
             }
 
             function filter_newest()
