--- a/html/course-list.html
+++ b/html/course-list.html
@@ -195,7 +195,6 @@
 
 				<!-- Pagination -->
 				<div class="flex-w flex-m p-t-15" id="buttons" >
-	
 					<!-- <a href="#1" class="flex-c-m s-txt24 size14 bgwhite bo6 bo-rad-3 hov3 trans-03 m-r-12 m-t-5 m-b-5 act-pagi" id="1">
 						1
 					</a>
@@ -212,7 +211,7 @@
 						Next
 						<i class="fa fa-angle-right m-l-8"></i>
 					</a> -->
-					<!-- <button type="button" class="btn btn-light" id="hello">click</button> -->
+					<!-- <button type="button" class="btn btn-light" id="hello" onclick="test()">click</button> -->
 				</div>
 		
 			</div>
@@ -226,9 +225,14 @@
 	</div>
 
 	<script>
+
 	
 	</script>
+
+
 	
+
+
 
 	
 <!--===============================================================================================-->	
