--- a/html/booking.html
+++ b/html/booking.html
@@ -32,7 +32,7 @@
       <div class="col-6" >
         <h3>Select Date </h3>
         <div class="date-picker">
-          <div class="selected-date"> 30 /07/ 2019</div>
+          <div class="selected-date" id="selected_date"> 30 /07/ 2019</div>
 
           <div class="dates">
             <div class="month">
