--- a/html/booking.html
+++ b/html/booking.html
@@ -77,7 +77,7 @@
       })
 
       select_button=document.getElementById("select_date_button")
-      select_button.addEventListener
+      select_button.addEventListener("click",display("30 /07/ 2019"))
   </script>;
 
 
