--- a/html/index.html
+++ b/html/index.html
@@ -606,6 +606,9 @@
 	$(function(){
       $("#footer").load("footer.html");
     });
+
+	const mode = sessionStorage.getItem('userid');
+	console.log(mode);
     </script>
 
 </body>
