--- a/html/booking.html
+++ b/html/booking.html
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="../css/calendar.css">
   <link href="../css/bootstrap.min.css" rel="stylesheet" >
   <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
-  <script type="module" src="../js/timings.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
 </head>
 
 <body >
@@ -64,7 +66,9 @@
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     
   <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-  <script type="module" src="../js/timings.js"></script>
+  <script  src="../js/timings2.js">
+    
+  </script>
 
     <script src="../js/index.js"></script>
 
