--- a/html/booking.html
+++ b/html/booking.html
@@ -30,7 +30,7 @@
   </div>
   <div class="container">
     <div class="row" > 
-      <div class="col-6" >
+      <div class="col" style="background-color:oldlace; border-radius: 30px; margin-right:10px;" >
         <h3 style="">Select Date </h3>
         <div class="container">
           <div class="date-picker">
