--- a/html/booking.html
+++ b/html/booking.html
@@ -14,23 +14,24 @@
 
 <body >
   <div id="nav-placeholder"></div>
-  <div class="jumbotron jumbotron-fluid " style="background-color:rgb(155, 181, 238);">
+  <div class="jumbotron jumbotron-fluid " style="background-color:#a8b7e7;">
     <div class="container">
       <div class="row">
         <div class="col-6" id="left-stuff">
-          <h1 class="display-4 " style="font-weight:bold;font-size:30px;" id="instr_title">We focus on your Story</h1>
+          <p style="color:black;font-size:15px;font-weight:bold;margin-bottom:30px">Welcome</p>
+          <h1 id="instr_title">We focus on your Story</h1>
           <p class="lead pt-4" style="font-size: 15px;" id="instr_quote">Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio reprehenderit earum sed porro nesciunt vitae voluptas sit ullam, quibusdam repellendus iusto commodi quo dolor vero possimus nemo cupiditate unde. Eaque!</p>
         </div>
-        <div class="col-6">
-          <img src="../images/random person.jpg" id="instructor-img" class='mx-auto d-block'>
-          <h4 id='instructor-name'>Instructor name</h4>
+        <div class="col-md-6">
+          <img src="../images/random person.jpg" id="instructor-img" class='mx-auto d-block '>
+          <span id='instructor-name' class='mx-auto d-block'>Instructor name</span>
         </div>
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row" > 
-      <div class="col" style="background-color:oldlace; border-radius: 30px; margin-right:10px;" >
+      <div class="col" style="background-color:oldlace; border-radius: 30px; margin-right:90px;" >
         <h3 style="">Select Date </h3>
         <div class="container">
           <div class="date-picker">
