--- a/html/forum.html
+++ b/html/forum.html
@@ -8,6 +8,12 @@
         crossorigin="anonymous">
 
         <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+
+        <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-app.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-auth.js"></script>
+        <script src="https://www.gstatic.com/firebasejs/7.15.5/firebase-database.js"></script>
+
+        <script src="../js/post.js"></script>
     
     </head>
     
@@ -150,6 +156,16 @@
             {
                 console.log(cur_filter)
                 console.log(cur_tag)
+            }
+
+            var all_post_list = get_all_post()
+            console.log("test")
+            console.log(get_all_post())
+            console.log(all_post_list)
+
+            for (item in all_post_list)
+            {
+                console.log(item)
             }
         </script>
     </body>
