--- a/html/course-detail.html
+++ b/html/course-detail.html
@@ -1,5 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+	<style>
+		.icon_star {
+			color:black;
+		}
+	</style>
+
 <head>
 
 	<title>Course Detail</title>
@@ -9,6 +15,8 @@
 	<meta name="keywords" content="AuCreative theme template">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
+	<link rel="stylesheet" type="text/css" href="../css/all_icons_min.css">
+	
 <!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="../images/icons/favicon.png"/>
 <!--===============================================================================================-->
@@ -31,6 +39,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/util.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/color.css">
+	<link rel="stylesheet" type="text/css" href="../css/all_icons_min.css">
 <!--===============================================================================================-->
 <link href="../course_detail/css/bootstrap.min.css" rel="stylesheet">
 <link href="../course_detail/css/style.css" rel="stylesheet">
