--- a/html/course-list.html
+++ b/html/course-list.html
@@ -158,7 +158,7 @@
 						<i class="fa fa-th-list"></i>
 					</span>
 						
-					<span class="s-txt2 p-t-3">
+					<span class="s-txt2 p-t-3" id="result-page">
 						Showing 1-4 of 8 results
 					</span>
 				</div>
