--- a/html/index.html
+++ b/html/index.html
@@ -35,6 +35,7 @@
 	<link rel="stylesheet" type="text/css" href="../css/util.css">
 	<link rel="stylesheet" type="text/css" href="../css/main.css">
 	<link rel="stylesheet" type="text/css" href="../css/color.css">
+	<link rel="stylesheet" type="text/css" href="../css/all_icons_min.css">
 <!--===============================================================================================-->
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 
